--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
     "@deck.gl/aggregation-layers": "^9.2.2",
     "@deck.gl/geo-layers": "^9.2.2",
     "@deck.gl/layers": "^9.2.2",
+    "@deck.gl/mapbox": "^9.2.2",
     "@deck.gl/react": "^9.2.2",
     "@headlessui/react": "^2.2.9",
+    "@luma.gl/core": "^9.2.4",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "deck.gl": "^9.2.2",
     "lucide-react": "^0.554.0",
+    "mapbox-gl": "^3.16.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
