--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "deck.gl": "^9.2.2",
     "lucide-react": "^0.554.0",
     "mapbox-gl": "^3.16.0",
-    "next": "16.0.3",
+    "next": "^14.2.18",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
