--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,8 @@
     "lucide-react": "^0.554.0",
     "mapbox-gl": "^3.16.0",
     "next": "^14.2.18",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0"
   },
