--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.554.0",
     "mapbox-gl": "^3.16.0",
     "next": "^14.2.18",
+    "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.4.1",
